# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import resolucoesRouter from "./resolucoes";
+import acordaosRouter from "./acordaos";
 import usuariosRouter from "./usuarios";
 import dashboardRouter from "./dashboard";
 import relatoriosRouter from "./relatorios";
@@ -13,6 +14,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(authRouter);
 router.use(resolucoesRouter);
+router.use(acordaosRouter);
 router.use(usuariosRouter);
 router.use(dashboardRouter);
 router.use(relatoriosRouter);
