# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./resolucoes";
 export * from "./usuarios";
 export * from "./historico";
 export * from "./sync-logs";
+export * from "./acordaos";
